fix(accordion): fix double border

--- a/components/accordion/src/Accordion.module.scss
+++ b/components/accordion/src/Accordion.module.scss
@@ -2,29 +2,35 @@
 
 .Accordion {
   .item {
+    background-color: $color-pearl;
     border: 1px solid $color-storm;
 
-    & + & {
+    & + .item {
       border-top: none;
+    }
+
+    &:last-of-type .details {
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
     }
   }
 
-  :global(.MuiAccordion-root.Mui-expanded) {
-    margin-bottom: 0;
-    margin-top: 0;
+  .details {
+    background-color: $color-white;
   }
 
   :global {
-    .MuiCollapse-container {
+    .MuiAccordion-root.Mui-expanded {
+      margin-bottom: 0;
+      margin-top: 0;
+    }
+
+    .MuiCollapse-wrapper {
       border-top: 1px solid $color-storm;
     }
 
-    .MuiAccordionSummary-root {
-      background-color: $color-pearl;
-
-      &.Mui-expanded {
-        min-height: initial;
-      }
+    .MuiAccordionSummary-root.Mui-expanded {
+      min-height: initial;
     }
 
     .MuiAccordionSummary-content.Mui-expanded {
